// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> should adopt color and bgColor props 1`] = `
.c0 {
  color: tomato;
  background-color: purple;
  padding: 1px 2px 2px;
  border-radius: 2px;
}

<Mark
  bgColor="purple"
  color="tomato"
>
  <styled.mark
    bgColor="purple"
    color="tomato"
  >
    <mark
      className="c0"
      color="tomato"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;

exports[`<Mark /> should match baseline snapshot with defaultProps 1`] = `
.c0 {
  color: inherit;
  background-color: rgba(100,146,219,0.8);
  padding: 1px 2px 2px;
  border-radius: 2px;
}

<Mark
  bgColor="rgba(100,146,219,0.8)"
  color="inherit"
>
  <styled.mark
    bgColor="rgba(100,146,219,0.8)"
    color="inherit"
  >
    <mark
      className="c0"
      color="inherit"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;
